# TwoFactorAuthApp

./: .env  Cargo.toml  Trunk.toml  default.conf  docker-compose.yml  dockerfile  index.html  prebuild.dockerfile  rust_base.dockerfile
api-boundary/src/: lib.rs
public/: style.css
src/: api.rs  api_state_handling.rs  api_state_view_infos.rs  consts.rs  lib.rs  main.rs  misc.rs
src/api/: api_boundary.rs  authorized_api.rs  mod.rs  otp_authorized_api.rs  resulthandler.rs  unauthorized_api.rs
src/api_state/: api_state_handling.rs  check_user_logged_in.rs  mod.rs
src/components/: credentials.rs  fields_error.rs  form_field.rs  login_form.rs  mod.rs  navbar.rs  otp_field.rs  otp_form.rs  password_verification_form.rs  register_form.rs
src/pages/: home.rs  login.rs  mod.rs  otp.rs  page_not_found.rs  register.rs  reset_password.rs
src/pages/login/: functions.rs  view.rs
src/pages/password_verification/: actions.rs  functions.rs  misc.rs  mod.rs  pass_verification_field_signals.rs  view.rs
src/pages/register/: functions.rs  view.rs
