[package]
name = "two_factor_auth_app_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.13" }
leptos_router = { version = "0.6.13", features = ["csr"] }
web-sys = "0.3.69"
async-std = "1.12.0"
lazy_static = "1.5.0"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
gloo-net = "0.6"
gloo-storage = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
uuid = { version = "1.10.0", features = ["v4"] }
qrcode = "0.14.1"
regex = "1.10.6"
wasm-bindgen = "0.2.92"



